--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,7 @@ body {
 #level-title {
   font-family: 'Press Start 2P', cursive;
   font-size: 3rem;
-  margin:  0;
-  padding-top: 20px;
+  margin:  3%;
   color: #FEF2BF;
 }
 
