--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,8 @@ body {
 #level-title {
   font-family: 'Press Start 2P', cursive;
   font-size: 3rem;
-  margin:  3%;
+  margin:  0;
+  padding: 60px;
   color: #FEF2BF;
 }
 
